# Rasterizer

./: .gitignore  CMakeLists.txt
projects/Engine/: CMakeLists.txt
projects/Engine/code/: Constants.h  GraphicsNode.cc  GraphicsNode.h  Input.cc  Input.h  LightNode.h  app.cc  app.h  main.cc
projects/Engine/res/shaders/: Frag_BlinnPhong.glsl  Frag_Color.glsl  Frag_Screen.glsl  Frag_UV.glsl  Frag_Unlit.glsl  Vertex_Legacy.glsl  Vertex_Screen.glsl  Vertex_Standard.glsl
projects/GraphicsLib/: CMakeLists.txt
projects/GraphicsLib/code/: Camera.cc  Camera.h  Resource_Mesh.cc  Resource_Mesh.h  Resource_Shader.cc  Resource_Shader.h  Resource_Texture.cc  Resource_Texture.h  S_Color.h  S_Material.h  S_Pixel.h  S_Vertex.h  Transform.cc  Transform.h
projects/GraphicsLib/code/unused structs/: S_Mesh.h  S_Shader.h  S_Texture.h
projects/GraphicsLib/docs/html/: annotated_dup.js  app_8h.html  class_example_1_1_example_app.html  class_example_1_1_example_app.js  class_mesh_resource.html  class_mesh_resource.js  dir_5d2d281693a86a88aa7815b885de8317.js  dir_a9ec1ef424966475f993eb98877e3088.html  dir_a9ec1ef424966475f993eb98877e3088.js  dir_d2957c52db63636617434c502492d36b.js  files.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  namespace_example.html  namespaces.html  navtreedata.js  navtreeindex0.js
projects/GraphicsLib/docs/html/search/: all_1.js  all_2.js  all_4.js  all_b.js  all_c.js  classes_1.js  functions_1.js  functions_3.js  functions_4.js  functions_9.js  (+1 more)
projects/GraphicsLib/docs/latex/: _mesh_resource_8h.tex  app_8cc.tex  app_8h.tex  class_example_1_1_example_app.tex  class_mesh_resource.tex  dir_5d2d281693a86a88aa7815b885de8317.tex  dir_d2957c52db63636617434c502492d36b.tex  files.tex  main_8cc.tex  refman.tex
projects/MathLib/: CMakeLists.txt
projects/MathLib/code/: CMath.h  CString.h  Mathlibrary.cc  Matrix4.h  Vector3.h
projects/MathLib/docs/html/: _matrix4_8h_source.html  _vector3_8h_source.html  annotated.html  annotated_dup.js  class_matrix4-members.html  class_matrix4.html  class_matrix4.js  class_matrix4_a1e9c6ec11a849d307a4c9c89e2d7e120_cgraph.dot  class_matrix4_a36ac1fad1e1a5ea3353e02894140958b_cgraph.dot  class_matrix4_aa444087727ce586e40b533e20cb94449_cgraph.dot  class_vector3-members.html  class_vector3.html  class_vector3.js  classes.html  dir_050edd66366d13764f98250ef6db77f6.html  dir_050edd66366d13764f98250ef6db77f6.js  files.html  functions.html  functions_func.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js
projects/MathLib/docs/latex/: annotated.tex  class_matrix4.tex  class_matrix4_a1e9c6ec11a849d307a4c9c89e2d7e120_cgraph.dot  class_matrix4_a36ac1fad1e1a5ea3353e02894140958b_cgraph.dot  class_matrix4_aa444087727ce586e40b533e20cb94449_cgraph.dot  class_vector3.tex  class_vector3_ae8096af624673eb7ca99bbb89e2404fc_cgraph.dot  refman.tex
projects/MathLib/docs/rtf/: class_vector3_ae8096af624673eb7ca99bbb89e2404fc_cgraph.dot  refman.rtf
projects/RenderLib/: CMakeLists.txt
projects/RenderLib/code/: Renderer.cc  Renderer.h  S_BufferData.h  Screen.cc  Screen.h
projects/RenderLib/docs/html/: _mesh_resource_8cc.html  _mesh_resource_8h.html  _mesh_resource_8h_source.html  annotated.html  app_8h_source.html  class_mesh_resource-members.html  dir_5d2d281693a86a88aa7815b885de8317.html  dir_d2957c52db63636617434c502492d36b.html  functions.html  globals_func.html  hierarchy.js  main_8cc.html
projects/RenderLib/docs/latex/: _mesh_resource_8cc.tex
(+74 files in other folders)
